feat. 增加註冊功能、驗證使用者註冊資料功能
